--- a/openstack-install/computenode/nova.conf.template
+++ b/openstack-install/computenode/nova.conf.template
@@ -26,6 +26,19 @@ novncproxy_base_url = http://controller:6080/vnc_auto.html
 
 verbose = True
 
+network_api_class = nova.network.neutronv2.api.API
+security_group_api = neutron
+linuxnet_interface_driver = nova.network.linux_net.LinuxOVSInterfaceDriver
+firewall_driver = nova.virt.firewall.NoopFirewallDriver
+
+[neutron]
+url = http://controller:9696
+auth_strategy = keystone
+admin_auth_url = http://controller:35357/v2.0
+admin_tenant_name = service
+admin_username = neutron
+admin_password = NEUTRON_PASS
+
 [glance]
 host = controller
 
